// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.changeProposalAssessment should create a new proposal assessment on the proposal. 1`] = `
Object {
  "changeProposalAssessment": Object {
    "assessment": Object {
      "body": null,
      "estimatedCost": null,
      "id": Any<String>,
      "officialResponse": null,
      "state": "IN_PROGRESS",
      "updatedBy": Object {
        "firstname": "supervisor",
        "id": "VXNlcjp1c2VyNTIz",
        "lastname": "supervisor",
      },
    },
    "userErrors": Array [
      Object {
        "message": null,
      },
    ],
  },
}
`;

exports[`mutations.changeProposalAssessment should evaluate the proposal assessment 1`] = `
Object {
  "evaluateProposalAssessment": Object {
    "assessment": Object {
      "body": "Un elfe oserait aller sous terre alors qu’un nain ne le voudrait pas ?",
      "estimatedCost": 1500,
      "id": Any<String>,
      "officialResponse": "Françaises, français, je vous ai compris !",
      "state": "FAVOURABLE",
      "updatedBy": Object {
        "firstname": "supervisor",
        "id": "VXNlcjp1c2VyNTIz",
        "lastname": "supervisor",
      },
    },
    "userErrors": Array [
      Object {
        "message": null,
      },
    ],
  },
}
`;

exports[`mutations.changeProposalAssessment should modify the specified proposal assessment. 1`] = `
Object {
  "changeProposalAssessment": Object {
    "assessment": Object {
      "body": "Un elfe oserait aller sous terre alors qu’un nain ne le voudrait pas ?",
      "estimatedCost": 1500,
      "id": Any<String>,
      "officialResponse": "Françaises, français, je vous ai compris !",
      "state": "IN_PROGRESS",
      "updatedBy": Object {
        "firstname": "supervisor",
        "id": "VXNlcjp1c2VyNTIz",
        "lastname": "supervisor",
      },
    },
    "userErrors": Array [
      Object {
        "message": null,
      },
    ],
  },
}
`;

exports[`mutations.changeProposalAssessment should not change the proposal assessment if the user is not assigned to. 1`] = `
Object {
  "changeProposalAssessment": Object {
    "assessment": null,
    "userErrors": Array [
      Object {
        "message": "You can't make an assessment on a proposal you are not assigned to.",
      },
    ],
  },
}
`;

exports[`mutations.evaluateProposalAssessment should evaluate the proposal assessment when authenticated a supervisor 1`] = `
Object {
  "evaluateProposalAssessment": Object {
    "assessment": Object {
      "body": "Un elfe oserait aller sous terre alors qu’un nain ne le voudrait pas ?",
      "estimatedCost": 1500,
      "id": Any<String>,
      "officialResponse": "Françaises, français, je vous ai compris !",
      "state": "FAVOURABLE",
      "updatedBy": Object {
        "firstname": "supervisor",
        "id": "VXNlcjp1c2VyNTIz",
        "lastname": "supervisor",
      },
    },
    "userErrors": Array [
      Object {
        "message": null,
      },
    ],
  },
}
`;

exports[`mutations.evaluateProposalAssessment should not evaluate the proposal assessment if official response is empty when authenticated as supervisor 1`] = `
Object {
  "evaluateProposalAssessment": Object {
    "assessment": Object {
      "body": "Un elfe oserait aller sous terre alors qu’un nain ne le voudrait pas ?",
      "estimatedCost": 1500,
      "id": Any<String>,
      "officialResponse": "Françaises, français, je vous ai compris !",
      "state": "FAVOURABLE",
      "updatedBy": Object {
        "firstname": "supervisor",
        "id": "VXNlcjp1c2VyNTIz",
        "lastname": "supervisor",
      },
    },
    "userErrors": Array [
      Object {
        "message": null,
      },
    ],
  },
}
`;

exports[`mutations.evaluateProposalAssessment should not modify the proposal assessment state value when authenticated as a user 1`] = `
Object {
  "evaluateProposalAssessment": Object {
    "assessment": null,
    "userErrors": Array [
      Object {
        "message": "You don't have the permission to evaluate this proposal.",
      },
    ],
  },
}
`;
